--- a/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
+++ b/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
@@ -30,11 +30,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0</string>
+	<string>1.3.0-beta</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.0</string>
+	<string>1.3.0-beta</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
@@ -72,3 +72,5 @@
 	</array>
 </dict>
 </plist>
+list>
+list>
