--- a/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
+++ b/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
@@ -30,11 +30,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.1</string>
+	<string>2.3.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.2.1</string>
+	<string>2.3.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
@@ -74,3 +74,5 @@
 </plist>
 </plist>
 </plist>
+plist>
+plist>
