--- a/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
+++ b/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
@@ -30,11 +30,17 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.12.2</string>
+	<string>2.12.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.12.2</string>
+	<string>2.12.3</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>org-appextension-feature-password-management</string>
+		<string>com.paypal.ppclient.touch.v1</string>
+		<string>com.paypal.ppclient.touch.v2</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
