--- a/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK+cardio-Sample-App-Info.plist
+++ b/SampleApp/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK+cardio-Sample-App-Info.plist
@@ -35,6 +35,12 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>2.12.2</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>org-appextension-feature-password-management</string>
+		<string>com.paypal.ppclient.touch.v1</string>
+		<string>com.paypal.ppclient.touch.v2</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
