--- a/SampleApp-Swift/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
+++ b/SampleApp-Swift/PayPal-iOS-SDK-Sample-App/PayPal-iOS-SDK-Sample-App-Info.plist
@@ -67,5 +67,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>To scan credit cards.</string>
 </dict>
 </plist>
